clean 387 up, remove time log